# solana_tps_bot

./: .env.sample  Cargo.toml  Dockerfile  README.MD  docker-compose.yaml  recipe.json
.github/workflows/: docker-publish.yml
src/: main.rs  transactions_per_secound.rs
