[package]
name = "solana_tps_bot"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "http"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sys-info = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
solana-client = "1.11.6"
solana-sdk = "1.11.6"